# canonicalizing-urls

./: .gitignore  BENCHMARK.md  Cargo.toml  DESIGN.md  LICENSE  README.md  SKILL.md  dist-workspace.toml  pyproject.toml
.github/workflows/: ci.yml
benches/: rule_index.rs
docs/plans/: 2026-02-26-canonicalizing-urls-design.md  2026-02-26-canonicalizing-urls-impl.md
examples/: gen_figures.rs
scripts/: canonicalize.py  engine.py  rules.py
skill/: SKILL.md
skill/scripts/: canonicalize.py  engine.py  gen_figures.py  install.sh
src/: engine.rs  lib.rs  main.rs  probe.rs  rules.rs  url_model.rs
tests/: builtin_rules.rs  cli.rs  perf_bench.py  perf_ratios.rs  test_canonicalize.py  test_uat.py  uat.rs
